[tool.poetry]
name = "alpine-formatter"
version = "0.1.0"
description = ""
authors = ["Daniel Nieto <danielnieto89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jsbeautifier = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
